Show profile line only of enterprises

--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -1,5 +1,4 @@
-<% if (@active_organization or profile) and (@active_organization != profile) %>
-  <% profile = @active_organization if active_organization %>
+<% if profile and profile.enterprise? and (profile != @active_organization or active_organization) %>
 
   <div id="profile-line-wrap-1" class="<%= active_organization ? 'active-organization' : 'profile-header' %>">
     <div id="profile-line-wrap-2">
