--- a/style.scss
+++ b/style.scss
@@ -841,3 +841,15 @@ p.menu_g_selecionado {
   @extend .action-button;
   @extend .pstyle-tp1;
 }
+
+#knowledges {
+  margin-top: 4*$base
+}
+
+#offers {
+  margin-top: 4*$base
+}
+
+#interests {
+  margin-top: 4*$base
+}
