--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -7,7 +7,7 @@
         <%= profile_image profile, :portrait, :class => 'profile-image' %>
         <span class="profile-name"><%= profile.name %></span>
 
-        <% admin = user and (user.is_admin?(environment) or user.is_admin?(profile)) %>
+        <% admin = user and (user.is_admin?(environment) or profile.admins.include?(user)) %>
         <span id="organization-menu">
           <%= link_to _('profile'), profile.url, :class => 'organization-button' %>
           <%= link_to _('members'), {:controller => :profile, :profile => profile.identifier, :action => :members}, :class => 'organization-button' %>
@@ -18,6 +18,7 @@
           <%= link_to _('interests'), {:controller => :profile, :profile => profile.identifier, :action => :interests}, :class => 'organization-button' %>
           <%= link_to _('currencies'), {:controller => :currency_plugin_myprofile, :profile => profile.identifier, :action => :index}, :class => 'organization-button' if admin %>
           <%= link_to _('sniffer'), {:controller => :sniffer_plugin_myprofile, :profile => profile.identifier, :action => :search}, :class => 'organization-button' if admin %>
+          <%= link_to _('settings'), {:controller => :profile_editor, :profile => profile.identifier, :action => :edit}, :class => 'organization-button' if admin %>
         </span>
 
         <div class="clean"></div>
