--- a/layouts/escambo.html.erb
+++ b/layouts/escambo.html.erb
@@ -28,7 +28,10 @@
     <div id='theme-header'>
       <%= theme_header %>
     </div>
-    <%= render :file => 'profile_line', :locals => {:profile => @active_organization, :active_organization => true} %>
+
+    <%= yield :active_organization %>
+
+    <%= yield :extra_header %>
 
     <div id="wrap-1">
 
@@ -41,9 +44,7 @@
         </div><!-- end id="navigation" -->
         <div id="content">
           <div id="content-inner">
-            <% if profile %>
-              <%= render :file => 'profile_line', :locals => {:profile => profile, :active_organization => false} %>
-            <% end %>
+            <%= yield :profile_line %>
 
             <%= insert_boxes(yield) %>
             <br style='clear: both'/>
