--- a/style.scss
+++ b/style.scss
@@ -310,7 +310,8 @@ input[type=text], input[type=password], textarea,
 
 #content {
   margin-top: 0;
-  min-height: 500px; /* put the header in the end */
+  margin-bottom: 3*$margin;
+  min-height: 500 - 3*$margin; /* put the header in the end */
 }
 #wrap-1 {
   position: relative;
@@ -318,36 +319,6 @@ input[type=text], input[type=password], textarea,
 #wrap-2 {
   background: transparent;
   border: none;
-}
-
-.box-2,
-.box-3 {
-  width: 220px;
-}
-body.template-default .box-1 {
-  margin: 0 244px 0 244px;
-}
-body.template-2leftbars .box-1 {
-  margin: 0 0 0 488px;
-}
-body.template-rightbar .box-1 {
-  margin: 0 244px 0 0;
-}
-body.template-leftbar .box-1 {
-  margin: 0 0 0 244px;
-}
-
-#content .link-list-block li a.link-this-page {
-  max-width: none;
-}
-
-#profile-activity ul,
-#profile-network ul,
-#profile-wall ul {
-  width: 100%;
-}
-.ui-tabs .ui-tabs-panel {
-  padding: 0;
 }
 
 #main-content-wrapper-1,
