Put noosfero reference on footer

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -4,6 +4,9 @@
 
     <div id="footer-devel">
       O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania.
+      <p>
+        O <b>escambo</b> usa <a href="http://noosfero.org">Noosfero</a> <a href="http://github.com/ESCAMBO" >modificado</a>, versão <%= Noosfero::VERSION %>
+      </p>
     </div>
 
     <div>
