Added teste version discalimer

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -1,3 +1,23 @@
+<style type="text/css">
+#test-disclaimer{
+position: fixed;
+bottom: 0px;
+background-color: black;
+color: white;
+width: 100%;
+text-align: center;
+padding: 9px;
+opacity: .9;
+font-weight:700;
+font-size:13px
+}
+#test-disclaimer a{
+color: white;
+}
+</style>
+<div id="test-disclaimer">
+Atenção: sistema em testes. Por favor, caso note algum problema, envie e-mail para bug@escambo.org.br. Melhor ainda se cadastrar na <a target="_blank" href="http://lists.escambo.org.br/listinfo.cgi/escambo-escambo.org.br">lista de discussão</a> e contribuir no desenvolvimento do software. Obrigado!
+</div>
 
 <div id="footer-wrap-1">
   <div id="footer-wrap-2">
