--- a/style.scss
+++ b/style.scss
@@ -232,8 +232,8 @@ th, td {
   border: none;
 }
 
-#content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
-  margin-bottom: $half-margin;
+h1, h2, h3, h4, h5, h6 {
+  margin: $half-margin 0;
 }
 
 label, .formlabel {
@@ -543,6 +543,29 @@ input[type=text], input[type=password], textarea,
   }
   #footer-devel b, #footer-support {
     color: $color-exchange;
+  }
+
+  #test-disclaimer {
+    display: none; /* show by javascript depending on cookie */
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    opacity: .9;
+    padding: $padding;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    font-size: 13px;
+
+    a {
+      color: white;
+    }
+    .close {
+      position: absolute;
+      right: $padding;
+      bottom: $padding;
+    }
   }
 }
 
