--- a/style.scss
+++ b/style.scss
@@ -75,103 +75,79 @@ $image-zoom: '/designs/themes/escambo/images/lupa.png';
        url('fonts/roboto-black.svg#webfont') format('svg');
 }
 
-/* Paragraphs styles definition */
+/* Paragraphs Styles */
 
 .pstyle-none {
   font-family: 'RobotoRegular'; /* FIXME to minionpro */
-  font-size: 12px;
 }
 .pstyle-basic {
   font-family: 'RobotoRegular';
-  font-size: 16px;
 }
 .pstyle-button {
   font-family: 'RobotoBlack';
-  font-size: 16px;
 }
 .pstyle-button-small {
   font-family: 'RobotoBoldCondensed';
-  font-size: 13px;
 }
 .pstyle-title {
   font-family: 'RobotoRegular'; /* FIXME to ubuntu */
-  font-size: 72px;
 }
 .pstyle-h1 {
   font-family: 'RobotoRegular';
-  font-size: 34px;
 }
 .pstyle-h2 {
   font-family: 'RobotoCondensed';
-  font-size: 26px;
 }
 .pstyle-h3 {
   font-family: 'RobotoBlack';
-  font-size: 21px;
 }
 .pstyle-h4 {
   font-family: 'RobotoBold';
-  font-size: 16px;
 }
 .pstyle-h5 {
   font-family: 'RobotoBlack';
-  font-size: 13px;
 }
 .pstyle-title-section {
   font-family: 'RobotoCondensed';
-  font-size: 92px;
 }
 .pstyle-field {
   font-family: 'RobotoRegular'; /* FIXME CourierNew */
-  font-size: 13px;
 }
 .pstyle-menu-big-selected {
   font-family: 'RobotoBoldCondensed';
-  font-size: 21px;
 }
 .pstyle-menu-big-unselected {
   font-family: 'RobotoCondensed';
-  font-size: 21px;
 }
 .pstyle-menu-medium-selected {
   font-family: 'RobotoBoldCondensed';
-  font-size: 16px;
 }
 .pstyle-menu-medium-unselected {
   font-family: 'RobotoCondensed';
-  font-size: 16px;
 }
 .pstyle-menu-small-selected {
   font-family: 'RobotoBoldCondensed';
-  font-size: 13px;
 }
 .pstyle-menu-small-unselected {
   font-family: 'RobotoCondensed';
-  font-size: 13px;
 }
 .pstyle-tp4 {
   font-family: 'RobotoRegular';
-  font-size: 42px;
 }
 .pstyle-tp3 {
   font-family: 'RobotoRegular';
-  font-size: 34px;
 }
 .pstyle-tp2 {
   font-family: 'RobotoRegular';
-  font-size: 26px;
 }
 .pstyle-tp1 {
   font-family: 'RobotoRegular';
-  font-size: 21px;
 }
 .pstyle-tm1 {
   font-family: 'RobotoRegular';
-  font-size: 13px;
 }
 .pstyle-tm2 {
   font-family: 'RobotoRegular';
-  font-size: 10px;
 }
 
 /* Overwrites and general styles */
