Move search code to escambo plugin

--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -1,10 +1,14 @@
+<% extend EscamboPlugin::EscamboDisplayHelper %>
+
+<% image_size = active_organization ? 'thumb' : 'portrait' %>
+
 <% if profile and profile.enterprise? and (profile != @active_organization or active_organization) %>
 
   <div id="profile-line-wrap-1" class="<%= active_organization ? 'active-organization' : 'profile-header' %>">
     <div id="profile-line-wrap-2">
 
       <div id="profile-line">
-        <%= profile_image profile, :portrait, :class => 'profile-image' %>
+        <%= profile_link_with_image profile, image_size %>
         <span class="profile-name"><%= profile.name %></span>
 
         <% admin = user and (user.is_admin?(environment) or profile.admins.include?(user)) %>
