Improve software use text

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -9,7 +9,7 @@
     <div id="footer-devel">
       O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania.
       <p>
-        O <b>escambo</b> usa <a href="http://noosfero.org">Noosfero</a> <a href="http://github.com/ESCAMBO" >modificado</a>, versão <%= Noosfero::VERSION %>
+        O <b>escambo</b> usa o software livre <a href="http://noosfero.org">Noosfero</a> <a href="http://github.com/ESCAMBO" >modificado</a>, versão <%= Noosfero::VERSION %>
       </p>
     </div>
 
