--- a/header.html.erb
+++ b/header.html.erb
@@ -39,7 +39,7 @@
           </div>
           <div>
             <%= select_tag "enterprise[selected]",
-              options_for_select(user.memberships.collect{ |p| [ p.name, p.id ] } + [[_('New enterprise'), 'new']], session[:active_organization]),
+              options_for_select(user.memberships.collect{ |p| [ p.name, p.id ] } + [[_('New enterprise'), 'new']], cookies[:active_organization]),
               :id => 'select-organization',
               :onclick => "escambo_theme.user.select('#{url_for :controller => :escambo_plugin_myprofile, :profile => user.identifier, :action => :select_active_organization}', '#{url_for :controller => :escambo_plugin_myprofile, :profile => user.identifier, :action => :new_enterprise}')" %>
           </div>
