Remove how it works

--- a/header.html.erb
+++ b/header.html.erb
@@ -18,7 +18,7 @@
     <%= link_to _('home'), '/' %>
     <%= link_to _('culture points'), :controller => :search, :action => :enterprises %>
     <%= link_to _('offers, knowledges and interests'), :controller => :search, :action => :index %>
-    <%= link_to _('how it works'), :controller => :home, :action => :how_it_works %>
+    <%# link_to _('how it works'), :controller => :home, :action => :how_it_works %>
   </div>
 
   <div id="user">
