Add more supporters' logos

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -21,6 +21,10 @@
       <img src="/designs/themes/escambo/images/logo-intercidadania.png"/>
       <img src="/designs/themes/escambo/images/logo-eita.png"/>
       <img src="/designs/themes/escambo/images/logo-preface.png"/>
+      <img src="/designs/themes/escambo/images/logo-minc.png"/>
+      <img src="/designs/themes/escambo/images/logo-iteia.png"/>
+      <img src="/designs/themes/escambo/images/logo-colaborativa-pe.png"/>
+      <img src="/designs/themes/escambo/images/logo-economia-viva.png"/>
     </div>
 
   </div>
