Default paragraph style

--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -1529,6 +1529,13 @@ h5, #content h5 {
   color: #394e41;
   font-weight: 300; }
 
+p {
+  padding: 12px;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0; }
+
 table {
   width: auto; }
 
