--- a/stylesheets/theme.scss
+++ b/stylesheets/theme.scss
@@ -195,6 +195,14 @@ h5, #content h5 {
   font-weight: 300;
 }
 
+p {
+  padding: $padding;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+}
+
 table {
   width: auto;
 }
