--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -13,16 +13,16 @@
 
         <% admin = user and (user.is_admin?(environment) or profile.admins.include?(user)) %>
         <span id="organization-menu">
-          <%= link_to _('profile'), profile.url, :class => 'organization-button' %>
-          <%= link_to _('members'), {:controller => :profile, :profile => profile.identifier, :action => :members}, :class => 'organization-button' %>
-          <%= link_to _('exchanges'), {:controller => :exchange_plugin_myprofile, :profile => profile.identifier, :action => :index}, :class => 'organization-button' if admin %>
-          <%# link_to _('network'), '', :class => 'organization-button' %>
-          <%= link_to _('offers'), {:controller => :profile, :profile => profile.identifier, :action => :products}, :class => 'organization-button' %>
-          <%= link_to _('knowledges'), {:controller => :profile, :profile => profile.identifier, :action => :knowledges}, :class => 'organization-button' %>
-          <%= link_to _('interests'), {:controller => :profile, :profile => profile.identifier, :action => :interests}, :class => 'organization-button' %>
-          <%= link_to _('currencies'), {:controller => :currency_plugin_myprofile, :profile => profile.identifier, :action => :index}, :class => 'organization-button' if admin %>
-          <%= link_to _('sniffer'), {:controller => :sniffer_plugin_myprofile, :profile => profile.identifier, :action => :search}, :class => 'organization-button' if admin %>
-          <%= link_to _('settings'), {:controller => :profile_editor, :profile => profile.identifier, :action => :edit}, :class => 'organization-button' if admin %>
+          <%= link_to _('profile'), profile.url, class: 'organization-button' %>
+          <%= link_to _('members'), {controller: :profile, profile: profile.identifier, action: :members}, class: 'organization-button' %>
+          <%= link_to _('exchanges'), {controller: :exchange_plugin_myprofile, profile: profile.identifier, action: :index}, class: 'organization-button' if admin %>
+          <%# link_to _('network'), '', class: 'organization-button' %>
+          <%= link_to _('offers'), {controller: :profile, profile: profile.identifier, action: :products}, class: 'organization-button' %>
+          <%= link_to _('knowledges'), {controller: :profile, profile: profile.identifier, action: :knowledges}, class: 'organization-button' %>
+          <%= link_to _('interests'), {controller: :profile, profile: profile.identifier, action: :interests}, class: 'organization-button' %>
+          <%= link_to _('currencies'), {controller: :currency_plugin_myprofile, profile: profile.identifier, action: :index}, class: 'organization-button' if admin %>
+          <%= link_to _('sniffer'), {controller: :sniffer_plugin_myprofile, profile: profile.identifier, action: :search}, class: 'organization-button' if admin %>
+          <%= link_to _('settings'), {controller: :profile_editor, profile: profile.identifier, action: :edit}, class: 'organization-button' if admin %>
         </span>
 
         <div class="clean"></div>
