Port to modal api

--- a/header.html.erb
+++ b/header.html.erb
@@ -55,7 +55,7 @@
     </span>
 
     <div id='inlineLoginBox' style='display: none;'>
-      <%= render file: 'account/login', locals: { is_thickbox: true } %>
+      <%= render file: 'account/login', locals: { is_popin: true } %>
     </div>
 
     <div class="clean"></div>
